--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background: #55aa73;
+    background: #1a2c38;
 }
 
 main {
-    background-color: white;
+    background-color:antiquewhite;
     padding: 0.5em 1em;
     border-radius: 0.5em;
     max-width: 40em;
